--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,7 +75,7 @@
                  
                 <% if(file && file.length > 0) { %>
                     <% file.forEach((item,ind)=>{ %>
-                       
+                      <a href="/notes/<%= item %>" class="block">
                             <div class="bg-white p-6 rounded-xl shadow-lg flex flex-col justify-between">
                     <div>
                         <h3 class="text-xl font-bold text-gray-800 mb-2"><%= item %></h3>
@@ -86,6 +86,7 @@
                     </div>
                     <!-- <p class="text-xs text-gray-400 mt-4">Saved: Oct 26, 2023</p> -->
                 </div>
+                </a>
                     <% }) %>
                   <% } else { %>
                     <h3 class="text-xl font-bold text-gray-800 mb-2">No Notes</h3>
