--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -35,7 +35,7 @@
         
         <!-- A subtle footer -->
         <div class="bg-slate-50 px-8 py-4">
-             <a href="/" class="text-indigo-600 hover:text-indigo-800 text-sm font-medium">Read more &rarr;</a>
+             <a href="/edit/<%=name%>" class="text-indigo-600 hover:text-indigo-800 text-sm font-medium">Edit &rarr;</a>
         </div>
     </div>
 
